# phishnet_api_v3

./: .env.SAMPLE  .gitignore  README.md  pyproject.toml
.pytest_cache/v/cache/: nodeids
phishnet_api_v3/: api_client.py  decorators.py  exceptions.py  settings.py  validators.py
phishnet_api_v3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_phishnet_api_v3.py
tests/data/: add_attendance.json  all_artists.json  all_jamcharts.json  all_people.json  all_people_types.json  all_venues.json  authority.json  get_appearances.json  get_collection.json  get_jamchart.json  get_relationships.json  get_show_links.json  get_upcoming_shows.json  get_user.json  get_venue.json  latest_setlist.json  people_by_show.json  query_collection.json  query_reviews.json  query_shows.json  rate_show.json  recent_blogs.json  recent_setlists.json  remove_attendance.json  show_attendees.json  tiph_setlist.json
